# mcp-telegram

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  EXPERT-PANEL-REVIEW.md  Justfile  LICENSE  README.md  cli.py  justfile  pyproject.toml  ruff.toml  telegram_qr_login.py  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  dependency-submission.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.3-EXPERT-PANEL-REVIEW.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: concurrent-cache-init-lock.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
.planning/phases/01-support-modules/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md
.planning/phases/02-tool-updates/: 02-01-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-new-tools/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-search-context-window/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-cache-error-hardening/: 05-02-PLAN.md  05-02-SUMMARY.md  05-VALIDATION.md
.planning/phases/06-telemetry-foundation/: 06-01-SUMMARY.md  06-03-SUMMARY.md  06-AUDIT-REPORT.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md  PHASE-06-PLANNING-SUMMARY.md
.planning/phases/07-cache-improvements-optimization/: 07-01-SUMMARY.md  07-02-PLAN.md  07-RESEARCH.md  CLEANUP-TIMER.md
.planning/phases/08-navigation-features/: 08-01-SUMMARY.md  08-02-SUMMARY.md
.planning/phases/09-forum-topics-support/: .continue-here.md  09-01-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md  09-06-PLAN.md  09-CLAUDE-DESKTOP-CHECKLIST.md  09-MANUAL-VALIDATION.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-evidence-base-audit-frame/: 10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-AUDIT-FRAME.md  10-BROWNFIELD-BASELINE.md  10-EVIDENCE-LOG.md  10-VERIFICATION.md
.planning/phases/11-current-surface-comparative-audit/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-SUMMARY.md  11-COMPARATIVE-AUDIT.md  11-TOOL-AUDIT.md  11-VERIFICATION.md  11-WORKFLOW-AUDIT.md
.planning/phases/12-redesign-options-pareto-recommendation/: 12-01-PLAN.md  12-02-SUMMARY.md  12-COMPARISON-FRAME.md  12-OPTION-PROFILES.md  12-REDESIGN-OPTIONS.md
.planning/phases/13-implementation-sequencing-decision-memo/: 13-02-SUMMARY.md  13-03-SUMMARY.md  13-IMPLEMENTATION-FRAME.md  13-IMPLEMENTATION-MEMO.md  13-SEQUENCING-BRIEF.md
.planning/phases/14-boundary-recovery/: 14-02-SUMMARY.md
.planning/phases/15-capability-seams/: 15-01-SUMMARY.md
.planning/phases/16-unified-navigation-contract/: 16-01-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE-v1.1.md  ARCHITECTURE-v1.2.md  ARCHITECTURE.md  FEATURES-v1.1.md  FEATURES-v1.2.md  FEATURES.md  PITFALLS-v1.1.md  PITFALLS-v1.2.md  PITFALLS.md  STACK-v1.1-detailed.md  STACK-v1.1.md  STACK-v1.2.md  STACK.md  SUMMARY-v1.1.md  SUMMARY-v1.2.md  SUMMARY.md
deploy/: AGENTS.md  Dockerfile  config.toml  docker-compose.yml  telegram_qr_login.py
deploy/scripts/: healthcheck_all.sh  healthcheck_daemon.py  healthcheck_http.py
devtools/: __init__.py  crap_ratchet.py  radon_ratchet.py
devtools/mcp_client/: README.md  __init__.py  cli.py  client.py  forum-smoke.json  smoke-account-trace.json  smoke-integration.json  smoke-no-daemon.json  v1.4-cache-smoke.json
docs/: architecture-proposal.md
reports/: crap-baseline.json  radon-baseline.json
scripts/: check_config_imports.py  check_packaging_smoke.py  check_policy_placement.py  check_runtime_seams.py  check_supply_chain_pins.py  policy_placement_allowlist.toml
src/mcp_telegram/: __init__.py  activity_cold_backfill.py  activity_hot_sweep.py  activity_peer_resolve.py  activity_peer_sweep.py  activity_sync.py  analytics.py  budget.py  cache.py  capabilities.py  capability_history.py  capability_search.py  capability_topics.py  capability_unread.py  config.py  correlation.py  daemon.py  daemon_account_trace.py  daemon_activity_stats.py  daemon_api.py  daemon_client.py  daemon_dialog_queries.py  daemon_entity_info.py  daemon_ipc.py  daemon_message.py  daemon_message_queries.py  daemon_read_state_queries.py  daemon_reading.py  daemon_scheduled_queries.py  daemon_source_export.py  delta_sync.py  dialog_sync.py  dialog_target.py  errors.py  event_handlers.py  feedback_db.py  flood.py  folder_store.py  folder_sync.py  formatter.py  (+29 more)
tests/: account_trace_fixtures.py  conftest.py  daemon_api_policy.py  helpers.py  privacy_audit.sh  reaction_helpers.py  test_account_trace_daemon.py  test_account_trace_enrichment.py  test_activity_cold_backfill.py  test_activity_dialog_kinds.py  test_activity_hot_sweep.py  test_activity_peer_resolve.py  test_activity_peer_sweep.py  test_activity_sync.py  test_analytics.py  test_apply_reactions_delta.py  test_budget.py  test_build_query.py  test_cache.py  test_capabilities.py  test_capability_history.py  test_capability_search.py  test_cli.py  test_cli_serve.py  test_config.py  test_config_import_gate.py  test_correlation.py  test_crap_ratchet.py  test_crap_ratchet_v2.py  test_daemon.py  test_daemon_api.py  test_daemon_api_feedback.py  test_daemon_api_jit_reactions.py  test_daemon_api_read_state.py  test_daemon_client.py  test_daemon_init_outbox_bootstrap.py  test_daemon_reading_import_boundary.py  test_daemon_reading_logging.py  test_daemon_source_export.py  test_delta_sync.py  (+68 more)
tests/fixtures/: 52-TOOL-OUTPUT-INVENTORY.md  fake_mcp_server.py
(+198 files in other folders)
