[project]
name = "mcp-telegram"
version = "0.1.2"
description = "MCP server to work with Telegram through MTProto"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
  "mcp>=1.26.0",
  "telethon>=1.42.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "typer>=0.24.1",
  "xdg-base-dirs>=6.0.0",
  "rapidfuzz>=3.14.3",
  "anyascii>=0.3.3",
  "snowballstemmer>=3.0.1",
  "phonenumbers>=9.0.28",
  "starlette>=0.52.1",
  "uvicorn>=0.41.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.0.0",
    "ruff>=0.15.17",
    "vulture>=2.14",
    "pytest-cov>=7",
    "pytest-xdist>=3.8.0",
    "actionlint-py>=1.7.12.24",
    "basedpyright>=1.39.8",
    "import-linter>=2.11",
    "pytest-crap>=0.3.0",
]

[project.scripts]
mcp-telegram = "mcp_telegram:app"

[tool.pytest.ini_options]
# Leave no /tmp residue on green runs (shared host): passed tests' tmp_path dirs are
# removed at session end; only failing tests keep their dir, and only the latest run.
# Flip policy to "none" for zero retention even on failures.
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["qrcode", "qrcode.*"]
ignore_missing_imports = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.vulture]
# models.py is excluded: it is a declarations-only schema module (TypedDict /
# dataclass / StrEnum), where vulture only emits false "unused variable" findings
# for schema fields and cannot see annotation-only type usage.
# vulture_whitelist.py lists intentionally-retained symbols (text-rendering layer,
# framework/dotMD false positives) so the advisory scan flags only NEW dead code.
paths = ["src/mcp_telegram", "vulture_whitelist.py"]
exclude = ["src/mcp_telegram/models.py"]
min_confidence = 60
# Entrypoints/callbacks registered via decorators look "unused" to vulture's static
# scan; Pydantic validators are invoked by Pydantic, not called directly.
ignore_decorators = [
    "@app.command", "@app.callback", "@feedback_app.command", "@mcp_tool",
    "@field_validator", "@model_validator",
]

[tool.coverage.run]
source = ["src/mcp_telegram"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 83

[tool.pyright]
include = ["src/mcp_telegram", "deploy", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportAny = "error"
reportExplicitAny = "error"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "error"
reportMissingTypeArgument = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"

[tool.importlinter]
root_package = "mcp_telegram"

[[tool.importlinter.contracts]]
name = "Core shared contracts stay below transport/runtime layers"
type = "forbidden"
source_modules = [
  "mcp_telegram.models",
  "mcp_telegram.resolver",
  "mcp_telegram.formatter",
  "mcp_telegram.pagination",
  "mcp_telegram.budget",
  "mcp_telegram.errors",
]
forbidden_modules = [
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_peer_resolve",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_sync",
  "mcp_telegram.delta_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.feedback_db",
  "mcp_telegram.flood",
  "mcp_telegram.fts",
  "mcp_telegram.read_state",
  "mcp_telegram.sync_db",
  "mcp_telegram.sync_worker",
  "mcp_telegram.telegram",
  "mcp_telegram.tools",
  "mcp_telegram.server",
]

[[tool.importlinter.contracts]]
name = "Core persistence contracts stay below transport/runtime layers"
type = "forbidden"
source_modules = [
  "mcp_telegram.read_state",
  "mcp_telegram.feedback_db",
  "mcp_telegram.sync_db",
  "mcp_telegram.fts",
]
forbidden_modules = [
  "mcp_telegram.server",
  "mcp_telegram.tools",
  "mcp_telegram.__init__",
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_peer_resolve",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.delta_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.sync_worker",
  "mcp_telegram.telegram",
]

[[tool.importlinter.contracts]]
name = "Daemon process should not import MCP transport/tooling surface"
type = "forbidden"
source_modules = ["mcp_telegram.daemon"]
forbidden_modules = ["mcp_telegram.server", "mcp_telegram.tools", "mcp_telegram.__init__"]

[[tool.importlinter.contracts]]
name = "Daemon API stays off MCP transport/server surface"
type = "forbidden"
source_modules = ["mcp_telegram.daemon_api"]
forbidden_modules = ["mcp_telegram.server", "mcp_telegram.tools", "mcp_telegram.__init__"]

[[tool.importlinter.contracts]]
name = "Daemon client is transport-only"
type = "forbidden"
source_modules = ["mcp_telegram.daemon_client"]
forbidden_modules = ["mcp_telegram.server", "mcp_telegram.__init__", "mcp_telegram.tools", "mcp_telegram.daemon_api"]

[[tool.importlinter.contracts]]
name = "daemon_client does not import daemon_api"
type = "forbidden"
source_modules = ["mcp_telegram.daemon_client"]
forbidden_modules = ["mcp_telegram.daemon_api"]

[[tool.importlinter.contracts]]
name = "MCP tools stay behind daemon client boundary"
type = "forbidden"
source_modules = [
  "mcp_telegram.tools._base",
  "mcp_telegram.tools.account_trace",
  "mcp_telegram.tools.activity",
  "mcp_telegram.tools.discovery",
  "mcp_telegram.tools.entity_info",
  "mcp_telegram.tools.feedback",
  "mcp_telegram.tools.reading",
  "mcp_telegram.tools.stats",
  "mcp_telegram.tools.structured",
  "mcp_telegram.tools.sync",
  "mcp_telegram.tools.unread",
]
forbidden_modules = [
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_account_trace",
  "mcp_telegram.daemon_activity_stats",
  "mcp_telegram.daemon_entity_info",
  "mcp_telegram.daemon_message",
  "mcp_telegram.daemon_reading",
  "mcp_telegram.daemon_source_export",
  "mcp_telegram.sync_worker",
  "mcp_telegram.delta_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.activity_sync",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_peer_resolve",
]

[[tool.importlinter.contracts]]
name = "Sync and activity workers stay off MCP transport and daemon API"
type = "forbidden"
source_modules = [
  "mcp_telegram.activity_sync",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_peer_resolve",
  "mcp_telegram.sync_worker",
  "mcp_telegram.delta_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.flood",
  "mcp_telegram.telegram",
]
forbidden_modules = [
  "mcp_telegram.server",
  "mcp_telegram.tools",
  "mcp_telegram.__init__",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
]
