[project]
name = "mcp-telegram"
version = "0.1.2"
description = "MCP server to work with Telegram through MTProto"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
  "mcp>=1.28.1",
  "telethon>=1.44.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.14.2",
  "typer>=0.27.0",
  "xdg-base-dirs>=6.0.0",
  "rapidfuzz>=3.14.3",
  "anyascii>=0.3.3",
  "snowballstemmer>=3.1.1",
  "phonenumbers>=9.0.34",
  "starlette>=1.3.1",
  "uvicorn>=0.51.0",
  "python-dotenv>=1.2.2",
  "qrcode>=8.2",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.157.0",
    "ruff>=0.15.22",
    "vulture>=2.14",
    "pytest-cov>=7",
    "pytest-xdist>=3.8.0",
    "actionlint-py>=1.7.12.24",
    "basedpyright>=1.39.9",
    "import-linter>=2.13",
    "pytest-crap>=0.3.0",
    "radon>=6.0.1",
    "deptry>=0.25.1",
]

[project.scripts]
mcp-telegram = "mcp_telegram:app"

[tool.ruff]
src = ["src", "deploy", "devtools", "tests", "scripts"]
line-length = 120
target-version = "py314"
indent-width = 4
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".planning",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
preview = true
ignore = [
  "E501",   # line length — formatter handles this
  "B008",   # Typer default values
  "SIM105", # try/except/pass — explicit about best-effort intent
  "SIM108", # ternary preference — case-by-case
  "SIM117", # nested with — sometimes clearer
  "ISC001", # formatter owns implicit string concatenation layout
  "RUF001", # ambiguous unicode — Cyrillic is intentional
  "RUF002",
  "RUF003",
  "UP007",  # Optional[X] vs X | None
  "UP045",  # typing.Optional still fine
]
explicit-preview-rules = true
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "RUF",
    "SIM",
    "PIE",
    "ISC",
    "RSE",
    "FLY",
    "PGH",
    "G",
    "LOG",
    "PLE",
    "C4",
    "DTZ",
    "N818",
    "PTH",
    "RET",
    "FURB",
    "PERF",
    "BLE",
    "PLR2004",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0916",
    "PLR0917",
    "PLR1702",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
max-branches = 11
max-statements = 45

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "E741",    # ambiguous `l` is fine in short test comprehensions
  "F841",    # unused locals are common test scaffolding
  "RUF059",  # unused tuple unpacks (common in test readability)
  "SIM105",  # try/except/pass in tests is explicit about intent
  "RUF043",  # regex meta chars in pytest match=
  "E402",    # late imports in tests (coverage-driven placement)
  "B007",    # unused loop vars in warmup/iteration patterns
  "RUF015",  # list slicing in one-off assertions
  "PLR0917", # too many positional arguments accepted in test helpers by design
  "PLR2004", # test magic-value comparisons
]
"src/mcp_telegram/daemon_api.py" = ["E402"]
"src/mcp_telegram/tools/discovery.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
# Leave no /tmp residue on green runs (shared host): passed tests' tmp_path dirs are
# removed at session end; only failing tests keep their dir, and only the latest run.
# Flip policy to "none" for zero retention even on failures.
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "-W",
  "error",
]
xfail_strict = true
markers = [
  "integration: tests that cross process, service, container, or network boundaries",
  "slow: tests that are too slow for the default unit gate",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["qrcode", "qrcode.*"]
ignore_missing_imports = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.vulture]
# Declaration-only schema modules are excluded: vulture only emits false
# "unused variable" findings for dataclass fields and cannot see annotation-only
# type usage.
# vulture_whitelist.py lists intentionally-retained symbols (text-rendering layer,
# framework/dotMD false positives) so the advisory scan flags only NEW dead code.
paths = ["src/mcp_telegram", "scripts", "vulture_whitelist.py"]
exclude = ["src/mcp_telegram/models.py", "src/mcp_telegram/telegram_reading.py"]
min_confidence = 60
# Entrypoints/callbacks registered via decorators look "unused" to vulture's static
# scan; Pydantic validators are invoked by Pydantic, not called directly.
ignore_decorators = [
    "@app.command", "@app.callback", "@feedback_app.command", "@mcp_tool",
    "@field_validator", "@model_validator",
]

[tool.coverage.run]
source = ["src/mcp_telegram"]
branch = true
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 83

[tool.pyright]
include = ["src/mcp_telegram", "deploy", "scripts", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportAny = "error"
reportExplicitAny = "error"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "error"
reportMissingTypeArgument = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"

[tool.importlinter]
root_package = "mcp_telegram"

[[tool.importlinter.contracts]]
name = "Core shared contracts stay below transport/runtime layers"
type = "forbidden"
source_modules = [
  "mcp_telegram.models",
  "mcp_telegram.resolver",
  "mcp_telegram.formatter",
  "mcp_telegram.pagination",
  "mcp_telegram.budget",
  "mcp_telegram.errors",
  "mcp_telegram.correlation",
]
forbidden_modules = [
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_peer_resolve",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_sync",
  "mcp_telegram.delta_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.feedback_db",
  "mcp_telegram.flood",
  "mcp_telegram.fts",
  "mcp_telegram.read_state",
  "mcp_telegram.sync_db",
  "mcp_telegram.sync_worker",
  "mcp_telegram.telegram",
  "mcp_telegram.tools",
  "mcp_telegram.server",
]

[[tool.importlinter.contracts]]
name = "Core persistence contracts stay below transport/runtime layers"
type = "forbidden"
source_modules = [
  "mcp_telegram.read_state",
  "mcp_telegram.feedback_db",
  "mcp_telegram.sync_db",
  "mcp_telegram.fts",
]
forbidden_modules = [
  "mcp_telegram.server",
  "mcp_telegram.tools",
  "mcp_telegram.__init__",
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_peer_resolve",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.delta_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.sync_worker",
  "mcp_telegram.telegram",
]

[[tool.importlinter.contracts]]
name = "Daemon process should not import MCP transport/tooling surface"
type = "forbidden"
source_modules = ["mcp_telegram.daemon"]
forbidden_modules = ["mcp_telegram.server", "mcp_telegram.tools", "mcp_telegram.__init__"]

[[tool.importlinter.contracts]]
name = "Daemon API stays off MCP transport/server surface"
type = "forbidden"
source_modules = ["mcp_telegram.daemon_api"]
forbidden_modules = ["mcp_telegram.server", "mcp_telegram.tools", "mcp_telegram.__init__"]

[[tool.importlinter.contracts]]
name = "Daemon reading stays off daemon API"
type = "forbidden"
source_modules = ["mcp_telegram.daemon_reading"]
forbidden_modules = ["mcp_telegram.daemon_api"]

[[tool.importlinter.contracts]]
name = "Daemon client is transport-only"
type = "forbidden"
source_modules = ["mcp_telegram.daemon_client"]
forbidden_modules = ["mcp_telegram.server", "mcp_telegram.__init__", "mcp_telegram.tools", "mcp_telegram.daemon_api"]

[[tool.importlinter.contracts]]
name = "daemon_client does not import daemon_api"
type = "forbidden"
source_modules = ["mcp_telegram.daemon_client"]
forbidden_modules = ["mcp_telegram.daemon_api"]

[[tool.importlinter.contracts]]
name = "MCP tools stay behind daemon client boundary"
type = "forbidden"
source_modules = [
  "mcp_telegram.tools._base",
  "mcp_telegram.tools.account_trace",
  "mcp_telegram.tools.activity",
  "mcp_telegram.tools.discovery",
  "mcp_telegram.tools.entity_info",
  "mcp_telegram.tools.feedback",
  "mcp_telegram.tools.reading",
  "mcp_telegram.tools.stats",
  "mcp_telegram.tools.structured",
  "mcp_telegram.tools.sync",
  "mcp_telegram.tools.unread",
]
forbidden_modules = [
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_account_trace",
  "mcp_telegram.daemon_activity_stats",
  "mcp_telegram.daemon_entity_info",
  "mcp_telegram.daemon_message",
  "mcp_telegram.daemon_reading",
  "mcp_telegram.daemon_source_export",
  "mcp_telegram.sync_worker",
  "mcp_telegram.delta_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.activity_sync",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_peer_resolve",
]

[[tool.importlinter.contracts]]
name = "MCP tools stay off Telegram fact adapters"
type = "forbidden"
source_modules = ["mcp_telegram.tools"]
forbidden_modules = [
  "mcp_telegram.telegram_fact_queries",
  "mcp_telegram.telegram_reactions",
  "mcp_telegram.telegram_read_receipts",
  "mcp_telegram.telegram_history",
]

[[tool.importlinter.contracts]]
name = "Sync and activity workers stay off MCP transport and daemon API"
type = "forbidden"
source_modules = [
  "mcp_telegram.activity_sync",
  "mcp_telegram.activity_peer_sweep",
  "mcp_telegram.activity_hot_sweep",
  "mcp_telegram.activity_cold_backfill",
  "mcp_telegram.activity_peer_resolve",
  "mcp_telegram.sync_worker",
  "mcp_telegram.delta_sync",
  "mcp_telegram.dialog_sync",
  "mcp_telegram.event_handlers",
  "mcp_telegram.flood",
  "mcp_telegram.telegram",
]
forbidden_modules = [
  "mcp_telegram.server",
  "mcp_telegram.tools",
  "mcp_telegram.__init__",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
]

[[tool.importlinter.contracts]]
name = "Temporal projection stays pure"
type = "forbidden"
source_modules = ["mcp_telegram.temporal"]
forbidden_modules = [
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
  "mcp_telegram.sync_db",
  "mcp_telegram.sync_worker",
  "mcp_telegram.telegram",
  "mcp_telegram.telegram_fact_queries",
  "mcp_telegram.telegram_fragments",
  "mcp_telegram.telegram_gateway",
  "mcp_telegram.telegram_history",
  "mcp_telegram.telegram_reactions",
  "mcp_telegram.telegram_read_receipts",
  "mcp_telegram.telegram_reading",
  "mcp_telegram.tools",
  "mcp_telegram.server",
]

[[tool.importlinter.contracts]]
name = "Telegram fact adapters stay below daemon orchestration"
type = "forbidden"
source_modules = [
  "mcp_telegram.telegram_fact_queries",
  "mcp_telegram.telegram_fragments",
  "mcp_telegram.telegram_gateway",
  "mcp_telegram.telegram_history",
  "mcp_telegram.telegram_reaction_queries",
  "mcp_telegram.telegram_reactions",
  "mcp_telegram.telegram_read_receipts",
  "mcp_telegram.telegram_reading",
]
forbidden_modules = [
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
  "mcp_telegram.server",
  "mcp_telegram.tools",
  "mcp_telegram.__init__",
]

[[tool.importlinter.contracts]]
name = "Daemon query owners stay below orchestration"
type = "forbidden"
source_modules = [
  "mcp_telegram.daemon_account_trace",
  "mcp_telegram.daemon_activity_stats",
  "mcp_telegram.daemon_dialog_queries",
  "mcp_telegram.daemon_message_queries",
  "mcp_telegram.daemon_read_state_queries",
  "mcp_telegram.daemon_scheduled_queries",
]
forbidden_modules = [
  "mcp_telegram.daemon",
  "mcp_telegram.daemon_api",
  "mcp_telegram.daemon_client",
  "mcp_telegram.server",
  "mcp_telegram.tools",
  "mcp_telegram.__init__",
]
